--- a/index.html
+++ b/index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modern Website</title>
+  <title>Contabilidad XYZ</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Modern Website</h1>
+    <h1>Contabilidad XYZ</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
-  
-  <section id="hero">
-    <div class="container">
-      <h2>Discover the Power of Modern Web Development</h2>
-      <p>Build responsive, interactive, and engaging websites with HTML, CSS, and JavaScript.</p>
-      <a href="#" class="btn">Get Started</a>
+
+  <section id="inicio" class="hero">
+    <div class="hero-content">
+      <h2>Bienvenido a Contabilidad XYZ</h2>
+      <p>Somos expertos en contabilidad y finanzas para pequeñas y medianas empresas.</p>
+      <a href="#servicios" class="btn">Ver servicios</a>
     </div>
   </section>
-  
-  <section id="features">
-    <div class="container">
-      <h2>Key Features</h2>
-      <div class="feature">
-        <i class="fas fa-laptop-code"></i>
-        <h3>Responsive Design</h3>
-        <p>Create websites that look great on any device.</p>
-      </div>
-      <div class="feature">
-        <i class="fas fa-paint-brush"></i>
-        <h3>Modern Styling</h3>
-        <p>Apply sleek and stylish designs to your web pages.</p>
-      </div>
-      <div class="feature">
-        <i class="fas fa-cogs"></i>
-        <h3>Interactivity</h3>
-        <p>Add dynamic elements and user interactions with JavaScript.</p>
-      </div>
+
+  <section id="servicios" class="services">
+    <h2>Nuestros Servicios</h2>
+    <div class="service">
+      <h3>Servicio 1</h3>
+      <p>Descripción del servicio 1.</p>
+    </div>
+    <div class="service">
+      <h3>Servicio 2</h3>
+      <p>Descripción del servicio 2.</p>
+    </div>
+    <div class="service">
+      <h3>Servicio 3</h3>
+      <p>Descripción del servicio 3.</p>
     </div>
   </section>
-  
+
+  <section id="contacto" class="contact">
+    <h2>Contacto</h2>
+    <p>Ponte en contacto con nosotros para más información:</p>
+    <form id="contact-form">
+      <input type="text" placeholder="Nombre" required>
+      <input type="email" placeholder="Correo electrónico" required>
+      <textarea placeholder="Mensaje" required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+
   <footer>
-    <div class="container">
-      <p>&copy; 2024 Modern Website. All rights reserved.</p>
-    </div>
+    <p>&copy; 2024 Contabilidad XYZ. Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
